[gd_scene load_steps=5 format=3 uid="uid://cmigjxcpw4ll3"]

[ext_resource type="PackedScene" uid="uid://bo6nhkikk0432" path="res://scenes/components/AngkotMap.tscn" id="1_3oxds"]
[ext_resource type="Script" path="res://scripts/MainUI/select_map.gd" id="1_571lt"]
[ext_resource type="PackedScene" uid="uid://c6243b85k6e7" path="res://scenes/components/InformationBar.tscn" id="2_rly7m"]
[ext_resource type="Script" path="res://scripts/time/time_manager.gd" id="3_iyfbv"]

[node name="SelectMap" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.913725, 0.784314, 0.564706, 1)
script = ExtResource("1_571lt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500
alignment = 1

[node name="InformationBar" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_rly7m")]
layout_mode = 2

[node name="LabelMoney" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="LabelTimer" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500
alignment = 1

[node name="LabelPage" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
theme_override_colors/font_shadow_color = Color(0.403922, 0.301961, 0.145098, 1)
theme_override_font_sizes/font_size = 20
text = "Pilih Derah"

[node name="TimeManager" type="Node" parent="." groups=["time_display"]]
script = ExtResource("3_iyfbv")

[node name="Timer" type="Timer" parent="TimeManager"]
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -502.0
offset_right = 502.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 648)
layout_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="HBoxContainer/VBoxContainer"]

[node name="AngkotMap" parent="HBoxContainer/VBoxContainer/CanvasLayer" instance=ExtResource("1_3oxds")]
custom_minimum_size = Vector2(520, 0)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -5.0
offset_top = -2.0
offset_right = 498.0
offset_bottom = 646.0
grow_horizontal = 1
grow_vertical = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/ColorRect"]
layout_mode = 0
offset_right = 501.0
offset_bottom = 498.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/CenterContainer"]
layout_mode = 2

[node name="RegionLabel" type="Label" parent="HBoxContainer/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
theme_override_font_sizes/font_size = 30
text = "Region:"

[node name="StatsLabel" type="Label" parent="HBoxContainer/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
theme_override_font_sizes/font_size = 30
text = "Stats:"

[node name="Button" type="Button" parent="HBoxContainer/ColorRect/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Buy Region"
